ergo_BASIS = \
hybrid-guess-basis	\
3-21G		\
3-21++G		\
4-31G		\
6-311G		\
6-31G		\
6-31Gs		\
6-31Gss		\
6-31+G		\
6-31++G		\
6-31++Gs	\
6-31++Gss	\
6-311++Gss	\
6-31Gfixed		\
Ahlrichs-Coulomb-Fit		\
AhlrichsDenFit		\
Ahlrichs-pVDZ		\
Ahlrichs-TZV		\
AhlrichsVDZ		\
Ahlrichs-VDZ		\
AhlrichsVTZ		\
Ahlrichs-VTZ		\
Almlof-Taylor-ANO		\
ano-1		\
ano-2		\
ano-3		\
ano-4		\
ano-5		\
aug-cc-pCV5Z		\
aug-cc-pCVDZ		\
aug-cc-pCVQZ		\
aug-cc-pCVTZ		\
aug-cc-pCVTZ-CTOCD-uc		\
aug-cc-pV5Z		\
aug-cc-pV6Z		\
aug-cc-pVDZ		\
aug-cc-pVQZ		\
aug-cc-pVTZ		\
aug-cc-pVTZ-J		\
aug-pV7Z		\
cc-pCV5Z		\
cc-pCVDZ		\
cc-pCVQZ		\
cc-pCVTZ		\
cc-pV(5+d)Z		\
cc-pV5Z		\
cc-pV5Zdenfit		\
cc-pV5Z-DK		\
cc-pV(6+d)Z		\
cc-pV6Z		\
cc-pV(D+d)Z		\
cc-pVDZ		\
cc-pVDZ-DK		\
cc-pV(Q+d)Z		\
cc-pVQZ		\
cc-pVQZdenfit		\
cc-pVQZ-DK		\
cc-pV(T+d)Z		\
cc-pVTZ		\
cc-pVTZdenfit		\
cc-pVTZ-DK		\
cc-pwCV5Z		\
cc-pwCVDZ		\
cc-pwCVQZ		\
cc-pwCVTZ		\
DunningDZ		\
DunningTZ		\
ECP		\
ECP_pseudo		\
ecp-sdd-DZ		\
ecp-sdd-pseudo		\
GAMESS-PVTZ		\
GAMESS-VTZ		\
Huckel		\
Huz-II		\
Huz-III		\
Huz-IIIsu3		\
Huz-IIsu2		\
Huz-IV		\
Huz-IVsu4		\
japrtano		\
McLean-Chandler-VTZ		\
MIDI		\
NASA-Ames-ANO		\
NQvD		\
pV6Z		\
pV7Z		\
raf-r		\
RoosAugDZANO		\
sad-J		\
sadlej		\
Sadlej-pVTZ		\
Sadlej-pVTZ-J		\
STO-1G		\
STO-2G		\
STO-3G		\
STO-6G		\
Turbomole-DZ		\
Turbomole-DZP		\
Turbomole-QZV		\
Turbomole-QZVP		\
Turbomole-QZVPP		\
Turbomole-SV		\
Turbomole-SVP		\
Turbomole-TZ		\
Turbomole-TZP		\
Turbomole-TZV		\
Turbomole-TZVP		\
Turbomole-TZVPP		\
Turbomole-TZVPPP		\
Wachtersa+f

EXTRA_DIST = $(ergo_BASIS)

ergobasisdir =$(ERGO_DATA_PREFIX)/basis

ergobasis_DATA = $(ergo_BASIS)
