EXTRA_DIST = \
	functions	\
        test_6_d_funcs.sh	\
	test_all.sh	\
	test_ci.sh		\
	test_dft_hybrid.sh	\
	test_dft_pure.sh	\
	test_dft_hicu.sh	\
	test_dft_sparse.sh	\
	test_dipole_moment.sh	\
	test_ext_elec_field.sh	\
	test_extracharges.sh	\
	test_fmm.sh		\
	test_fmm_b3lyp.sh	\
	test_fmm_camb3lyp.sh	\
	test_ghost.sh		\
	test_gradient.sh	\
	test_h2o_1000.sh	\
	test_h2o_125_hf.sh	\
	test_h2o_125_b3lyp.sh	\
	test_h2o_125_blyp.sh	\
	test_h2o_216_hf.sh	\
	test_h2o_216_b3lyp.sh	\
	test_h2o_216_blyp.sh	\
	test_gluala2_hf.sh	\
	test_gluala2_b3lyp.sh	\
	test_gluala2_blyp.sh	\
	test_hf.sh		\
	test_hf_blsz1.sh	\
	test_hf_blsz2.sh	\
	test_hf_fd.sh		\
	test_lowacc.sh		\
	test_lr_exc.sh		\
	test_lr_exc_hf.sh	\
	test_lr_pol.sh		\
	test_mixedbasis.sh	\
	test_roks.sh		\
	test_tdhf_dynamics.sh	\
	test_uhf.sh

TESTS_ENVIRONMENT = top_builddir=$(top_builddir) top_srcdir=$(top_srcdir) \
	KEEP=$(KEEP)

TESTS =	\
	test_tdhf_dynamics.sh	\
	test_lowacc.sh		\
	test_dft_hybrid.sh	\
	test_dft_pure.sh	\
	test_dft_hicu.sh	\
	test_dft_sparse.sh	\
	test_dipole_moment.sh	\
	test_ext_elec_field.sh	\
	test_extracharges.sh	\
	test_fmm.sh		\
	test_fmm_b3lyp.sh	\
	test_fmm_camb3lyp.sh	\
	test_ghost.sh		\
	test_gradient.sh	\
	test_hf.sh		\
        test_6_d_funcs.sh	\
	test_hf_blsz1.sh	\
	test_hf_blsz2.sh	\
	test_hf_fd.sh		\
	test_lr_exc.sh		\
	test_lr_exc_hf.sh	\
	test_lr_pol.sh		\
	test_mixedbasis.sh	\
	test_roks.sh		\
	test_uhf.sh		\
	test_ci.sh
