noinst_LIBRARIES = libci.a

libci_a_SOURCES = \
	ci.cc			\
	ci.h

AM_CPPFLAGS = \
	-I$(top_srcdir)/source			\
	-I$(top_srcdir)/source/basisset		\
	-I$(top_srcdir)/source/densfromf	\
	-I$(top_srcdir)/source/utilities	\
	-I$(top_srcdir)/source/utilities_basic	\
	-I$(top_srcdir)/source/integrals	\
        -I$(top_srcdir)/source/matrix           \
        -I$(top_srcdir)/source/matrix/template_lapack/blas           \
        -I$(top_srcdir)/source/matrix/template_lapack/lapack
