noinst_LIBRARIES = libintegrals.a

libintegrals_a_SOURCES = \
	basis_func_extent.cc		\
	basis_func_extent.h		\
	basis_func_extent_1el.cc	\
	basis_func_extent_1el.h		\
	basis_func_pair_list.cc		\
	basis_func_pair_list.h		\
	basis_func_pair_list_1el.cc	\
	basis_func_pair_list_1el.h	\
	box_system.cc		\
	box_system.h		\
	boysfunction.cc		\
	boysfunction.h		\
	densityfitting.cc	\
	densityfitting.h	\
	exponent_list.cc	\
	exponent_list.h		\
	hermite_conversion_explicit.cc	\
	hermite_conversion_explicit.h	\
	hermite_conversion_prep.cc	\
	hermite_conversion_prep.h	\
	hermite_conversion_symb.cc	\
	hermite_conversion_symb.h	\
	integral_info.cc	\
	integral_info.h		\
	integrals_1el.cc	\
	integrals_1el.h		\
	integrals_1el_kinetic.cc\
	integrals_1el_kinetic.h	\
	integrals_1el_potential.cc	\
	integrals_1el_potential.h	\
	integrals_1el_single.cc		\
	integrals_1el_single.h		\
	integrals_2el.h			\
	integrals_2el_boxed.cc		\
	integrals_2el_boxed.h		\
	integrals_2el_coulomb.cc	\
	integrals_2el_coulomb.h		\
	integrals_2el_exchange.cc	\
	integrals_2el_exchange.h	\
	integrals_2el_exchange_prep.cc	\
	integrals_2el_exchange_prep.h	\
	integrals_2el_explicit.cc	\
	integrals_2el_explicit.h	\
	integrals_2el_layer.cc	\
	integrals_2el_layer.h	\
	integrals_2el_repeating.cc	\
	integrals_2el_repeating.h	\
	integrals_2el_single.cc	\
	integrals_2el_single.h	\
	integrals_2el_util_funcs.cc	\
	integrals_2el_util_funcs.h	\
	integrals_2el_utils.cc	\
	integrals_2el_utils.h	\
	integrals_general.cc	\
	integrals_general.h	\
	integrals_hermite.cc	\
	integrals_hermite.h	\
	matrix_norm.cc		\
	matrix_norm.h		\
	mm_limit_table.cc	\
	mm_limit_table.h	\
	monomial_info.cc	\
	monomial_info.h		\
	multipole.cc		\
	multipole.h		\
	operator_matrix.cc	\
	operator_matrix.h	\
	organize_distrs.cc	\
	organize_distrs.h	\
	simple_sparse_mat.cc	\
	simple_sparse_mat.h

AM_CPPFLAGS = \
	-I$(top_srcdir)/source			\
	-I$(top_srcdir)/source/utilities	\
	-I$(top_srcdir)/source/utilities_basic	\
	-I$(top_srcdir)/source/basisset		\
        -I$(top_srcdir)/source/matrix     	\
        -I$(top_srcdir)/source/matrix/template_lapack/blas     \
        -I$(top_srcdir)/source/matrix/template_lapack/lapack
